tests/exprs/tstmtexp.nim
discard """
  line: 7
  errormsg: "value of type 'int literal(5)' has to be discarded"
"""
# Test 3

1+4
